k8s/bootstrap/argo-cd/tailscale.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "argocd"
    tailscale.com/https: "true"
