k8s/bootstrap/argo-cd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.fomiller.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
